--- a/src/app/primitiv/fizetesimod/fizetesimod-szerkesztes/fizetesimod-szerkesztes.component.html
+++ b/src/app/primitiv/fizetesimod/fizetesimod-szerkesztes/fizetesimod-szerkesztes.component.html
@@ -9,7 +9,7 @@
         <div class="egylabel">Fizetési mód</div>
         <input type="text" class="form-control form-control-sm oszlop3" id="irattipus1"
                maxlength="30" required autocomplete="off"
-               [(ngModel)]="fizetesimodservice.DtoEdited.Fizetesimod1" name="irattipus1">
+               [(ngModel)]="DtoEdited.Fizetesimod1" name="irattipus1">
       </div>
     </div>
 
