--- a/src/app/primitiv/helyseg/helyseg-szerkesztes/helyseg-szerkesztes.component.html
+++ b/src/app/primitiv/helyseg/helyseg-szerkesztes/helyseg-szerkesztes.component.html
@@ -9,7 +9,7 @@
         <div class="egylabel">Helységnév</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="helysegnev"
                maxlength="100" required autocomplete="off"
-               [(ngModel)]="helysegservice.DtoEdited.Helysegnev" name="helysegnev">
+               [(ngModel)]="DtoEdited.Helysegnev" name="helysegnev">
       </div>
     </div>
 
