--- a/src/app/primitiv/irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
+++ b/src/app/primitiv/irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
@@ -9,7 +9,7 @@
         <div class="egylabel">Irattipus</div>
         <input type="text" class="form-control form-control-sm oszlop5" id="irattipus1"
                maxlength="30" required autocomplete="off"
-               [(ngModel)]="irattipusservice.DtoEdited.Irattipus1" name="irattipus1">
+               [(ngModel)]="DtoEdited.Irattipus1" name="irattipus1">
       </div>
     </div>
 
