--- a/src/app/primitiv/me/me-szerkesztes/me-szerkesztes.component.html
+++ b/src/app/primitiv/me/me-szerkesztes/me-szerkesztes.component.html
@@ -9,7 +9,7 @@
         <div class="egylabel">Mennyiségi egység</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="irattipus1"
                maxlength="10" required autocomplete="off"
-               [(ngModel)]="meservice.DtoEdited.Me" name="irattipus1">
+               [(ngModel)]="DtoEdited.Me" name="irattipus1">
       </div>
     </div>
 
