--- a/src/app/primitiv/teendo/teendo-szerkesztes/teendo-szerkesztes.component.html
+++ b/src/app/primitiv/teendo/teendo-szerkesztes/teendo-szerkesztes.component.html
@@ -9,7 +9,7 @@
         <div class="egylabel">Teendő</div>
         <input type="text" class="form-control form-control-sm oszlop5" id="irattipus1"
                maxlength="100" required autocomplete="off"
-               [(ngModel)]="teendoservice.DtoEdited.Teendo1" name="irattipus1">
+               [(ngModel)]="DtoEdited.Teendo1" name="irattipus1">
       </div>
     </div>
 
