--- a/src/app/primitiv/termekdij/termekdij-szerkesztes/termekdij-szerkesztes.component.html
+++ b/src/app/primitiv/termekdij/termekdij-szerkesztes/termekdij-szerkesztes.component.html
@@ -9,7 +9,7 @@
         <div class="egylabel">KT</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="kt"
                maxlength="30" required autocomplete="off"
-               [(ngModel)]="termekdijservice.DtoEdited.Termekdijkt" name="kt">
+               [(ngModel)]="DtoEdited.Termekdijkt" name="kt">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -17,7 +17,7 @@
         <div class="egylabel">Megnevezés</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="megnevezes"
                maxlength="50" required autocomplete="off"
-               [(ngModel)]="termekdijservice.DtoEdited.Termekdijmegnevezes" name="megnevezes">
+               [(ngModel)]="DtoEdited.Termekdijmegnevezes" name="megnevezes">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -25,7 +25,7 @@
         <div class="egylabel">Egységár</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="egysegar"
                required autocomplete="off"
-               [(ngModel)]="termekdijservice.DtoEdited.Termekdijegysegar" name="egysegar">
+               [(ngModel)]="DtoEdited.Termekdijegysegar" name="egysegar">
       </div>
     </div>
 
