--- a/src/app/primitiv/helyseg/helyseg-list/helyseg-list.component.html
+++ b/src/app/primitiv/helyseg/helyseg-list/helyseg-list.component.html
@@ -1,17 +1,17 @@
 <div class="alapkeret">
-  <h5 *ngIf="!helysegservice.zoom">{{helysegservice.cim}}</h5>
-  <h5 *ngIf="helysegservice.zoom">{{helysegservice.cim}} - zoom</h5>
+  <h5 *ngIf="!zoom">{{helysegservice.cim}}</h5>
+  <h5 *ngIf="zoom">{{helysegservice.cim}} - zoom</h5>
   <app-toolbar [Szurok]="szurok"
-               [(szempont)]="helysegservice.ekDto.szempont"
-               [(minta)]="helysegservice.ekDto.minta"
+               [(szempont)]="ekDto.szempont"
+               [(minta)]="ekDto.minta"
                [enKereses]="!eppFrissit" (Kereses)="onKereses()"
-               [enUj]="!eppFrissit && mod" (Uj)="onUj()"
-               [visZoom]="helysegservice.zoom" (StopZoom)="onStopzoom()">
+               [enUj]="!eppFrissit && jog" (Uj)="onUj()"
+               [visZoom]="zoom" (StopZoom)="onStopzoom()">
   </app-toolbar>
   <app-tabla #tabla
              [items]="helysegservice.Dto"
              [colsets]="helysegservice.GridSettings"
-             [zoom]="helysegservice.zoom"
+             [zoom]="zoom"
              (forzoom)="onStartzoom($event)"
              (forid)="onId($event)"
              [ujTemplate]="griduj"
