--- a/src/app/primitiv/me/me-list/me-list.component.html
+++ b/src/app/primitiv/me/me-list/me-list.component.html
@@ -1,17 +1,17 @@
 <div class="alapkeret">
-  <h5 *ngIf="!meservice.zoom">{{meservice.cim}}</h5>
-  <h5 *ngIf="meservice.zoom">{{meservice.cim}} - zoom</h5>
+  <h5 *ngIf="!zoom">{{meservice.cim}}</h5>
+  <h5 *ngIf="zoom">{{meservice.cim}} - zoom</h5>
   <app-toolbar [Szurok]="szurok"
-               [(szempont)]="meservice.ekDto.szempont"
-               [(minta)]="meservice.ekDto.minta"
+               [(szempont)]="ekDto.szempont"
+               [(minta)]="ekDto.minta"
                [enKereses]="!eppFrissit" (Kereses)="onKereses()"
-               [enUj]="!eppFrissit && mod" (Uj)="onUj()"
-               [visZoom]="meservice.zoom" (StopZoom)="onStopzoom()">
+               [enUj]="!eppFrissit && jog" (Uj)="onUj()"
+               [visZoom]="zoom" (StopZoom)="onStopzoom()">
   </app-toolbar>
   <app-tabla #tabla
              [items]="meservice.Dto"
              [colsets]="meservice.GridSettings"
-             [zoom]="meservice.zoom"
+             [zoom]="zoom"
              (forzoom)="onStartzoom($event)"
              (forid)="onId($event)"
              [ujTemplate]="griduj"
