--- a/src/app/primitiv/penznem/penznem-szerkesztes/penznem-szerkesztes.component.html
+++ b/src/app/primitiv/penznem/penznem-szerkesztes/penznem-szerkesztes.component.html
@@ -9,7 +9,7 @@
         <div class="egylabel">Pénznem</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="irattipus1"
                maxlength="3" required autocomplete="off"
-               [(ngModel)]="penznemservice.DtoEdited.Penznem1" name="irattipus1">
+               [(ngModel)]="DtoEdited.Penznem1" name="irattipus1">
       </div>
     </div>
 
