--- a/src/app/projektkapcsolat/projektkapcsolat-ujirat/projektkapcsolat-ujirat.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-ujirat/projektkapcsolat-ujirat.component.html
@@ -47,6 +47,8 @@
   </form>
 
   <ng-container *ngIf="projektkapcsolatservice.SzerkesztesMode === 1">
-      <app-irattipus-list></app-irattipus-list>
+      <app-irattipus-list [maszk]="this.projektkapcsolatservice.DtoEdited.Irattipus || ''"
+                          (eventSelectzoom)="onIrattipusSelectzoom($event)"
+                          (eventStopzoom)="onIrattipusStopzoom()"></app-irattipus-list>
   </ng-container>
 </div>
