--- a/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
+++ b/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
@@ -9,7 +9,7 @@
         <div class="egylabel">Megnevezés</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="megnevezes"
                maxlength="100" required autocomplete="off"
-               [(ngModel)]="cikkservice.DtoEdited.Megnevezes" name="megnevezes">
+               [(ngModel)]="DtoEdited.Megnevezes" name="megnevezes">
       </div>
     </div>
 
@@ -18,7 +18,7 @@
         <div class="egylabel">Me</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="me"
                maxlength="10" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
-               [(ngModel)]="cikkservice.DtoEdited.Me" name="me">
+               [(ngModel)]="DtoEdited.Me" name="me">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px; display: inline-block" type="button" (click)="MeZoom()">...</button>
       </div>
 
@@ -26,7 +26,7 @@
         <div class="egylabel">ÁFA kulcs</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="afakulcs"
                maxlength="10" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
-               [(ngModel)]="cikkservice.DtoEdited.Afakulcs" name="afakulcs">
+               [(ngModel)]="DtoEdited.Afakulcs" name="afakulcs">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px; display: inline-block" type="button" (click)="AfakulcsZoom()">...</button>
       </div>
     </div>
@@ -36,20 +36,20 @@
         <div class="egylabel">Egységár</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="egysegar"
                maxlength="10" required autocomplete="off"
-               [(ngModel)]="cikkservice.DtoEdited.Egysegar" name="egysegar">
+               [(ngModel)]="DtoEdited.Egysegar" name="egysegar">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
         <div class="egylabel">Tömeg, kg</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="tomeg"
                maxlength="10" required autocomplete="off"
-               [(ngModel)]="cikkservice.DtoEdited.Tomegkg" name="tomeg">
+               [(ngModel)]="DtoEdited.Tomegkg" name="tomeg">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
         <div class="egylabel">Készletet képez</div>
         <select type="text" class="form-control form-control-sm"
-                [(ngModel)]="cikkservice.DtoEdited.Keszletetkepez" name="kk">
+                [(ngModel)]="DtoEdited.Keszletetkepez" name="kk">
           <option value="false">Nem</option>
           <option value="true">Igen</option>
         </select>
@@ -61,7 +61,7 @@
         <div class="egylabel">Termékdíj KT</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="termekdijkt"
                maxlength="10" autocomplete="off" style="background-color: aquamarine; display: inline-block"
-               [(ngModel)]="cikkservice.DtoEdited.Termekdijkt" name="termekdijkt">
+               [(ngModel)]="DtoEdited.Termekdijkt" name="termekdijkt">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px; display: inline-block" type="button" (click)="TermekdijZoom()">...</button>
       </div>
 
@@ -69,14 +69,14 @@
         <div class="egylabel">Termékdíj megnevezés</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="termekdijmegnevezes"
                autocomplete="off" readonly
-               [(ngModel)]="cikkservice.DtoEdited.Termekdijmegnevezes" name="termekdijmegnevezes">
+               [(ngModel)]="DtoEdited.Termekdijmegnevezes" name="termekdijmegnevezes">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
         <div class="egylabel">Termékdíj egységár</div>
         <input type="number" class="form-control form-control-sm oszlop1" id="termekdijegysegar"
                autocomplete="off" readonly
-               [(ngModel)]="cikkservice.DtoEdited.Termekdijegysegar" name="termekdijegysegar">
+               [(ngModel)]="DtoEdited.Termekdijegysegar" name="termekdijegysegar">
       </div>
     </div>
 
@@ -86,18 +86,18 @@
     </div>
   </form>
 
-  <ng-container *ngIf="cikkservice.SzerkesztesMode === 1">
-    <app-me-list [maszk]="this.cikkservice.DtoEdited.Me || ''"
+  <ng-container *ngIf="SzerkesztesMode === 1">
+    <app-me-list [maszk]="DtoEdited.Me || ''"
                  (eventSelectzoom)="onMeSelectzoom($event)"
                  (eventStopzoom)="onMeStopzoom()"></app-me-list>
   </ng-container>
-  <ng-container *ngIf="cikkservice.SzerkesztesMode === 2">
-    <app-afakulcs-list [maszk]="this.cikkservice.DtoEdited.Afakulcs || ''"
+  <ng-container *ngIf="SzerkesztesMode === 2">
+    <app-afakulcs-list [maszk]="DtoEdited.Afakulcs || ''"
                        (eventSelectzoom)="onAfakulcsSelectzoom($event)"
                        (eventStopzoom)="onAfakulcsStopzoom()"></app-afakulcs-list>
   </ng-container>
-  <ng-container *ngIf="cikkservice.SzerkesztesMode === 3">
-    <app-termekdij-list [maszk]="this.cikkservice.DtoEdited.Termekdijkt || ''"
+  <ng-container *ngIf="SzerkesztesMode === 3">
+    <app-termekdij-list [maszk]="DtoEdited.Termekdijkt || ''"
                         (eventSelectzoom)="onTermekdijSelectzoom($event)"
                         (eventStopzoom)="onTermekdijStopzoom()"></app-termekdij-list>
   </ng-container>
