--- a/src/app/ugyfel/ugyfel-szerkesztes/ugyfel-szerkesztes.component.html
+++ b/src/app/ugyfel/ugyfel-szerkesztes/ugyfel-szerkesztes.component.html
@@ -9,7 +9,7 @@
         <div class="egylabel">Név</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="nev"
                maxlength="200" required autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.Nev" name="nev">
+               [(ngModel)]="DtoEdited.Nev" name="nev">
       </div>
     </div>
 
@@ -18,14 +18,14 @@
         <div class="egylabel">Cég</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="ceg"
                maxlength="200" autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.Ceg" name="ceg">
+               [(ngModel)]="DtoEdited.Ceg" name="ceg">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
         <div class="egylabel">Beosztás</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="beosztas"
                maxlength="200" autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.Beosztas" name="beosztas">
+               [(ngModel)]="DtoEdited.Beosztas" name="beosztas">
       </div>
     </div>
 
@@ -34,14 +34,14 @@
         <div class="egylabel">Ir. szám</div>
         <input type="text" class="form-control form-control-sm oszlop1" id="iranyitoszam"
                maxlength="20" required autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.Iranyitoszam" name="iranyitoszam">
+               [(ngModel)]="DtoEdited.Iranyitoszam" name="iranyitoszam">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
         <div class="egylabel">Helységnév</div>
         <input type="text" class="form-control form-control-sm oszlop3" id="helysegnev"
                maxlength="100" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
-               [(ngModel)]="ugyfelservice.DtoEdited.Helysegnev" name="helysegnev">
+               [(ngModel)]="DtoEdited.Helysegnev" name="helysegnev">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px; display: inline-block" type="button" (click)="HelysegZoom()">...</button>
       </div>
     </div>
@@ -51,21 +51,21 @@
         <div class="egylabel">Közterület</div>
         <input type="text" class="form-control form-control-sm oszlop3" id="kozterulet"
                maxlength="100" required autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.Kozterulet" name="kozterulet">
+               [(ngModel)]="DtoEdited.Kozterulet" name="kozterulet">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
         <div class="egylabel">Közterület tipus</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="kozterulettipus"
                maxlength="20" required autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.Kozterulettipus" name="kozterulettipus">
+               [(ngModel)]="DtoEdited.Kozterulettipus" name="kozterulettipus">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
         <div class="egylabel">Házszám</div>
         <input type="text" class="form-control form-control-sm oszlop1" id="hazszam"
                maxlength="10" required autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.Hazszam" name="hazszam">
+               [(ngModel)]="DtoEdited.Hazszam" name="hazszam">
       </div>
     </div>
 
@@ -74,14 +74,14 @@
         <div class="egylabel">Telefon</div>
         <input type="text" class="form-control form-control-sm oszlop3" id="telefon"
                maxlength="20" required autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.Telefon" name="telefon">
+               [(ngModel)]="DtoEdited.Telefon" name="telefon">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
         <div class="egylabel">Email</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="email"
                maxlength="50" required autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.Email" name="email">
+               [(ngModel)]="DtoEdited.Email" name="email">
       </div>
     </div>
 
@@ -90,14 +90,14 @@
         <div class="egylabel">Adószám</div>
         <input type="text" class="form-control form-control-sm oszlop2" style="display: inline-block" id="adoszam"
                maxlength="20" autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.Adoszam" name="adoszam">
+               [(ngModel)]="DtoEdited.Adoszam" name="adoszam">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
         <div class="egylabel">EU adószám</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="euadoszam"
                maxlength="20" autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.Euadoszam" name="euadoszam">
+               [(ngModel)]="DtoEdited.Euadoszam" name="euadoszam">
       </div>
     </div>
 
@@ -106,14 +106,14 @@
         <div class="egylabel">Egyéb link</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="egyeblink"
                maxlength="200" autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.Egyeblink" name="egyeblink">
+               [(ngModel)]="DtoEdited.Egyeblink" name="egyeblink">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
         <div class="egylabel">Ajánlotta</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="ajanlotta"
                maxlength="200" autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.Ajanlotta" name="ajanlotta">
+               [(ngModel)]="DtoEdited.Ajanlotta" name="ajanlotta">
       </div>
     </div>
 
@@ -122,7 +122,7 @@
         <div class="egylabel">Megjegyzés</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="megjegyzes"
                maxlength="200" autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.Megjegyzes" name="megjegyzes">
+               [(ngModel)]="DtoEdited.Megjegyzes" name="megjegyzes">
       </div>
     </div>
 
@@ -132,8 +132,8 @@
     </div>
   </form>
 
-  <ng-container *ngIf="ugyfelservice.SzerkesztesMode === 1">
-    <app-helyseg-list [maszk]="this.ugyfelservice.DtoEdited.Helysegnev || ''"
+  <ng-container *ngIf="SzerkesztesMode === 1">
+    <app-helyseg-list [maszk]="DtoEdited.Helysegnev || ''"
                       (eventSelectzoom)="onHelysegSelectzoom($event)"
                       (eventStopzoom)="onHelysegStopzoom()"></app-helyseg-list>
   </ng-container>
