pénztárig - projekt következik

--- a/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
@@ -138,7 +138,9 @@
   </ng-container>
 
   <ng-container *ngIf="bizonylatservice.SzerkesztesMode === 2">
-    <app-ugyfel-list></app-ugyfel-list>
+    <app-ugyfel-list [maszk]="bizonylatservice.ComplexDtoEdited.Dto.Ugyfelnev || ''"
+                     (eventSelectzoom)="onUgyfelSelectzoom($event)"
+                     (eventStopzoom)="onUgyfelStopzoom()"></app-ugyfel-list>
   </ng-container>
 
   <ng-container *ngIf="bizonylatservice.SzerkesztesMode === 3">
