--- a/src/app/penztar/penztar-list/penztar-list.component.html
+++ b/src/app/penztar/penztar-list/penztar-list.component.html
@@ -1,8 +1,8 @@
 <div class="alapkeret">
   <h5>{{penztarservice.cim}}</h5>
   <app-toolbar [Szurok]="szurok"
-               [(szempont)]="penztarservice.ekDto.szempont"
-               [(minta)]="penztarservice.ekDto.minta"
+               [(szempont)]="ekDto.szempont"
+               [(minta)]="ekDto.minta"
                [enKereses]="!eppFrissit" (Kereses)="onKereses()"
                [enUj]="!eppFrissit && jog" (Uj)="onUj()">
   </app-toolbar>
