--- a/src/app/projekt/projekt-szerkesztes/projekt-szerkesztes.component.html
+++ b/src/app/projekt/projekt-szerkesztes/projekt-szerkesztes.component.html
@@ -73,10 +73,13 @@
   </form>
 
   <ng-container *ngIf="projektservice.SzerkesztesMode === 1">
-    <app-ugyfel-list></app-ugyfel-list>
+    <app-ugyfel-list [maszk]="projektservice.DtoEdited.Ugyfelnev || ''"
+                     (eventSelectzoom)="onUgyfelSelectzoom($event)"
+                     (eventStopzoom)="onUgyfelStopzoom()"></app-ugyfel-list>
   </ng-container>
+
   <ng-container *ngIf="projektservice.SzerkesztesMode === 2">
-    <app-penznem-list [maszk]="this.projektservice.DtoEdited.Penznem || ''"
+    <app-penznem-list [maszk]="projektservice.DtoEdited.Penznem || ''"
                       (eventSelectzoom)="onPenznemSelectzoom($event)"
                       (eventStopzoom)="onPenznemStopzoom()"></app-penznem-list>
   </ng-container>
