--- a/src/app/ugyfel/ugyfel-projekt/ugyfel-projekt.component.html
+++ b/src/app/ugyfel/ugyfel-projekt/ugyfel-projekt.component.html
@@ -1,4 +1,4 @@
 <div class="alapkeret">
   <h5>Projektek</h5>
-  <app-projekt-tabla [Dto]="ugyfelservice.ProjektDto" [enIdclick]="false"></app-projekt-tabla>
+  <app-projekt-tabla [Dto]="ProjektDto" [enIdclick]="false"></app-projekt-tabla>
 </div>
