--- a/src/app/csoport/csoport-felhasznalo/csoport-felhasznalo.component.html
+++ b/src/app/csoport/csoport-felhasznalo/csoport-felhasznalo.component.html
@@ -2,9 +2,9 @@
   <h5>A csoport felhasználói</h5>
   <table class="table table-bordered table-sm table-responsive" style="border: none">
     <tbody>
-    <tr *ngFor="let item of csoportservice.DtoCsoportFelhasznalo; let i = index">
+    <tr *ngFor="let item of DtoCsoportFelhasznalo; let i = index">
       <td>
-        <input type="checkbox" [checked]="item.Csoporttag" (click)="felhasznalo(i)">
+        <input type="checkbox" [checked]="item.Csoporttag" (click)="checkFelhasznalo(i)">
       </td>
       <td>{{item.Azonosito}}</td>
       <td>{{item.Nev}}</td>
