--- a/src/app/csoport/csoport-list/csoport-list.component.html
+++ b/src/app/csoport/csoport-list/csoport-list.component.html
@@ -1,25 +1,87 @@
 <div class="alapkeret">
   <h5>{{csoportservice.cim}}</h5>
   <app-toolbar [Szurok]="szurok"
-               [(szempont)]="csoportservice.ekDto.szempont"
-               [(minta)]="csoportservice.ekDto.minta"
+               [(szempont)]="ekDto.szempont"
+               [(minta)]="ekDto.minta"
                [enKereses]="!eppFrissit" (Kereses)="onKereses()"
-               [enUj]="!eppFrissit" (Uj)="onUj()">
+               [enUj]="!eppFrissit" (Uj)="doUjtetel()">
   </app-toolbar>
   <app-tabla #tabla
-             [items]="csoportservice.Dto"
+             [items]="Dto"
              [colsets]="csoportservice.GridSettings"
              (forid)="onId($event)"
              [ujTemplate]="griduj"
              [egyTemplate]="gridegy">
   </app-tabla>
+
   <ng-template #griduj>
     <app-csoport-szerkesztes [uj] = "true"
-                             (eventSzerkeszteskesz)="onUjkesz()">
+                             (eventSzerkeszteskesz)="onUjtetelkesz($event)">
     </app-csoport-szerkesztes>
   </ng-template>
+
   <ng-template #gridegy>
-    <app-csoport-egy (eventTorlesutan)="onTorlesutan()"></app-csoport-egy>
+    <div class="alapkeret">
+      <div>
+        <nav>
+          <button [disabled]="eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-file" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-minus" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit" (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-edit" aria-hidden="true"></i>
+          </button>
+
+          <button [disabled]="eppFrissit" (click)="doNav(11)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            Felhasználó
+          </button>
+          <button [disabled]="eppFrissit" (click)="doNav(12)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            Jog
+          </button>
+        </nav>
+      </div>
+
+      <ng-container *ngIf="egymode === 1">
+        <div [@rowanimation]>
+          <app-reszletek [cim]="csoportservice.cim"
+                         [item]="Dto[DtoSelectedIndex]"
+                         [colsets]="csoportservice.ReszletekSettings">
+          </app-reszletek>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 2">
+        <div [@rowanimation]>
+          <app-tetel-torles [cim]="csoportservice.cim"
+                            [eppFrissit]="eppFrissit"
+                            (eventTorles)="onTorles($event)">
+          </app-tetel-torles>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 3">
+        <div [@rowanimation]>
+          <app-csoport-szerkesztes [uj]="false"
+                                   [DtoOriginal]="Dto[DtoSelectedIndex]"
+                                   (eventSzerkeszteskesz)="onModositaskesz($event)">
+          </app-csoport-szerkesztes>
+        </div>
+      </ng-container>
+
+
+      <ng-container *ngIf="egymode === 11">
+        <div [@rowanimation]>
+          <app-csoport-felhasznalo [Csoportkod]="Dto[DtoSelectedIndex].Csoportkod">
+          </app-csoport-felhasznalo>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 12">
+        <div [@rowanimation]>
+          <app-csoport-jog [Csoportkod]="Dto[DtoSelectedIndex].Csoportkod">
+          </app-csoport-jog>
+        </div>
+      </ng-container>
+    </div>
   </ng-template>
 </div>
 
