--- a/src/app/csoport/csoport-szerkesztes/csoport-szerkesztes.component.html
+++ b/src/app/csoport/csoport-szerkesztes/csoport-szerkesztes.component.html
@@ -9,13 +9,13 @@
         <div class="egylabel">Csoport</div>
         <input type="text" class="form-control form-control-sm oszlop3" id="csoport1"
                maxlength="30" required autocomplete="off"
-               [(ngModel)]="csoportservice.DtoEdited.Csoport1" name="csoport1">
+               [(ngModel)]="DtoEdited.Csoport1" name="csoport1">
       </div>
     </div>
 
     <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
-      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="OnCancel()">Mégsem</button>
+      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
 </div>
